[package]
name = "sakinorva-reversing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.26"
rand = "0.8.5"
reqwest = "0.11.14"
scraper = "0.15.0"
serde = {version="1.0.154", features = ["derive"]}
serde_json = "1.0.94"
tokio = {version="1.26.0", features=["full"]}
